# OptoLlama

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
Diffusion/scripts/: analyze_inference_MC.py  data_generation_RayFlare.py  data_generation_TMM_FAST.py  dataset.py  model.py  optollama.py  test_RAT.txt  train_test_matchmaker.py  utils.py
archive/Diffusion/scripts/: analyze_inference_MC_ddp.py  call_rayflare.py  call_tmm_fast.py  plots.py  result_plots.py
configs/: config_OG_LOCAL.yaml  config_OL_HPCZ1.yaml  config_optogpt.yaml  optogpt.yaml  optollama.yaml
jobscripts/: inference.sh  plot.sh  test_notebook.sh  train.sh
optollama/: __init__.py  runner.py
optollama/data/: __init__.py  dataset.py  spectra.py  token.py
optollama/dataloader/: dataset.py
optollama/evaluation/: __init__.py  evaluate.py  metrics.py  prediction.py  simulation.py
optollama/model/: builder.py  model.py  optogpt.py  optollama.py  sampling.py
optollama/plotting/: __init__.py  core.py  dashboard.py  sample_plots.py
optollama/scripts/: cli.py  evaluate.py  inference.py
optollama/utils/: __init__.py  cli.py  runner.py  utils.py
scripts/: MATsimilarity.py  bragg_stack_finder.py  bragg_stack_finder_test_data.py  bragg_stack_finder_train_data.py  call_rayflare.py  call_tmm_fast.py  cli.py  config_OG_LOCAL.yaml  config_OL_ASENA.yaml  config_OL_HPC.yaml  config_OL_LOCAL.yaml  data.py  dataset.py  download_checkpoint.py  download_data.py  evaluate.py  evaluator.py  infer_optollama.py  inference.py  inference.sh  interactive_infer.py  main.py  matchValTrain.py  match_test_to_train.py  mcd_inference.py  mcd_plots.py  metrics.py  model.py  model_OptoGPT.py  model_OptoLlama.py  optogpt.py  optollama.py  plot.py  plot_results.py  plots.py  plots.sh  run_OptoLlama_EVAL.py  runner.py  simulation_TMM_FAST.py  simulation_dummy.py  (+10 more)
scripts/archive/: MATsimilarity.py  call_rayflare.py  data.py  evaluator.py  main.py  plots.py  test_read_closest_datapoint.py  utils.py
scripts/archive/merger-CAT/: infer_optollama.py  inference.sh  optollama.py  test.txt  utils.py  utils_data.py  utils_eval.py  utils_eval0.py  utils_inference.py
shell_scripts/: bragg_stack_finder.sh  inference.sh
src/optollama/evaluation/: match_test_to_train.py  plots.py
src/optollama/model/: optollama.py
src/optollama/scripts/: cli.py  evaluate.py
src/optollama/utils/: bragg_stack_finder.py
