[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optollama"
version = "0.9.0"
description = "AI model for inverse stack thin film layer design "
authors = [
    {name = "Schaible, Jonas", email="jonas.schaible@helmholtz-berlin.de"},
    {name = "Götz, Markus", email="markus.goetz@kit.edu"},
    {name = "Özdemir, Asena", email="asena.oezdemir@kit.edu"}
]
maintainers = [
    {name = "Schaible, Jonas", email="jonas.schaible@helmholtz-berlin.de"}
]
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = ["AI", "neural network", "masked diffusion model", "multi-layer thin film", "optics", "inverse design"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: GPU",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed"
]

requires-python = ">=3.11"

dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "scipy",
  "torch",
  "safetensors",
  "tmm_fast",
  "tqdm",
  "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://www.helmholtz-berlin.de/forschung/oe/se/solarenergieoptik/index_en.html"
Repository = "https://github.com/jnitzz/OptoLlama"
Issues = "https://github.com/jnitzz/OptoLlama/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/optollama"]

[tool.mypy]
python_version = "3.9"
modules = ["optollama"]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 132
indent-width = 4

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["N", "E4", "E7", "E9", "F", "D"]
ignore = ["D100", "D104", "D404"]
# Enable import sorting
extend-select = ["I"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention = "numpy"
